changed path of SVG button images
from src="../public/"
to src="public/

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
         <img src="public/images/pictograms/right-arrow.svg" alt="" class="turnPageButton" id="pageRight" onclick="turnPage(currentPage+1)">
     </div>
     <div class="timelineContainer">
-      <img class="timelineButton" id="write_button" src="..public/images/pictograms/compose.svg" alt="" onclick="storyWriter();">
-      <img class="timelineButton" id="read_button" src="..public/images/pictograms/open-book.svg" alt="" onclick="storyReader();">
-      <img class="timelineButton" id="library_button" src="..public/images/pictograms/library.svg" alt="" onclick="openLibrary();">
+      <img class="timelineButton" id="write_button" src="public/images/pictograms/compose.svg" alt="" onclick="storyWriter();">
+      <img class="timelineButton" id="read_button" src="public/images/pictograms/open-book.svg" alt="" onclick="storyReader();">
+      <img class="timelineButton" id="library_button" src="public/images/pictograms/library.svg" alt="" onclick="openLibrary();">
       <ul class="timeline" id="timeline">
        <!-- <li class="timeline_node" id="timeline_node_1"></li> -->
       </ul>
