changed Haircut story to french version

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Draggable Test</title>
+  <title>Story Board</title>
   <link rel="stylesheet" href="public/stylesheets/dragula.css">
   <link rel="stylesheet" href="public/stylesheets/draggable.css">
 </head>
